--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,6 @@ body {
 }
 
 /** Global **/
-.logo {
-    font-family: 'Playfair Display SC', serif;
-}
 
 * {
     font-family: 'Dosis', sans-serif;
@@ -68,54 +65,38 @@ h1,h2,h3,h4,h5,h6 {
     color: var(--white);
 }
 
-/** Header **/
-.header {
-    height: 10rem;
+.bg-color-verde {
     background-color: var(--green);
-    box-shadow: 0px -20px 23px -8px rgba(0,0,0,0.41) inset;
-    -webkit-box-shadow: 0px -20px 23px -8px rgba(0,0,0,0.41) inset;
-    -moz-box-shadow: 0px -20px 23px -8px rgba(0,0,0,0.41) inset;
 }
-.header__contenedor {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
+
+.bg-color-verdeLima {
+    background-color: var(--lightgreen);
 }
-.header__logo {
-    box-sizing: border-box;
-    margin-top: 2rem;
-}
-.header__logo a {
-    align-items: center;
-    text-align: center;
-}
-.header__logo .logo {
-    width: 12rem;
+
+/** Header **/
+.navbar .navbar-brand {
+    font-family: 'Playfair Display SC', serif;
     color: var(--white);
+    font-size: 3.5rem;
 }
-.headerNav__list {
-    padding: 0;
-    align-items: right;
-    text-align: center;
-    margin-top: 4rem;
-}
-.headerNav__list li {
-    display: inline;
-    padding: 0 1.4rem;
-    font-size: 1.8rem;
-    border-right: solid 1px var(--white);
-}
-.headerNav__list li:last-child {
-    border-right: none;
-}
-.headerNav__list li a {
+
+.navbar .nav-link {
     color: var(--white);
+    font-size: 2.6rem;
 }
-.headerNav__list a:hover {
-    border-bottom: solid 1px var(--white);
-    transition: 0.5s;
+
+.navbar .navbar-collapse {
+    flex-grow: 0;
+}
+
+@media (min-width: 768px) {
+    .navbar .navbar-nav {
+        align-items: center;
+    }
+}
+
+.navbar button {
+    color: var(--white);
 }
 
 /** Banner **/
