--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,19 @@
 /** Reset box model **/
 html {
     box-sizing: border-box;
-    font-size: 62.5%; /* =10px */
+    font-size: 62.5%;
+    /* =10px */
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
+
 body {
-    font-size: 1.6rem; /* =16px */
+    font-size: 1.6rem;
+    /* =16px */
     background-color: var(--cream);
 }
 
@@ -25,6 +31,7 @@ body {
 * {
     font-family: 'Dosis', sans-serif;
 }
+
 ul {
     list-style: none;
 }
@@ -32,34 +39,45 @@ ul {
 a {
     text-decoration: none;
 }
+
 a:visited {
     color: inherit;
 }
+
 p {
     margin: 0;
 }
+
 h1 {
     font-size: 4rem;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
 .button {
+    color: var(--white);
     background-color: var(--lightgreen);
     width: 12rem;
     border: none;
     border-radius: 0.5rem;
     padding: 0.8rem 2rem;
-    box-shadow: 0px 6px 7px 3px rgba(0,0,0,0.52);
-    -webkit-box-shadow: 0px 6px 7px 3px rgba(0,0,0,0.52);
-    -moz-box-shadow: 0px 6px 7px 3px rgba(0,0,0,0.52);
+    box-shadow: 0px 6px 7px 3px rgba(0, 0, 0, 0.52);
+    -webkit-box-shadow: 0px 6px 7px 3px rgba(0, 0, 0, 0.52);
+    -moz-box-shadow: 0px 6px 7px 3px rgba(0, 0, 0, 0.52);
 }
+
 .button:hover {
     color: var(--black);
     background-color: var(--cream);
 }
+
 .button a {
     box-sizing: border-box;
     color: var(--white);
@@ -105,10 +123,11 @@ h1,h2,h3,h4,h5,h6 {
     width: 100%;
     height: 60rem;
     margin-bottom: 2.5rem;
-    box-shadow: 0px 9px 9px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 0px 9px 9px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 9px 9px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 9px 9px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 9px 9px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 9px 9px 0px rgba(0, 0, 0, 0.75);
 }
+
 .banner video {
     position: absolute;
     top: 0;
@@ -118,6 +137,7 @@ h1,h2,h3,h4,h5,h6 {
     object-fit: cover;
     z-index: -2;
 }
+
 .banner__shadow {
     position: absolute;
     top: 0;
@@ -127,6 +147,7 @@ h1,h2,h3,h4,h5,h6 {
     background-color: rgba(3, 3, 6, 0.5);
     z-index: -1;
 }
+
 .banner__contenido {
     display: flex;
     flex-direction: column;
@@ -137,161 +158,67 @@ h1,h2,h3,h4,h5,h6 {
     margin: 0 auto;
     gap: 4rem;
 }
+
 .banner__text {
     font-size: 4rem;
     font-weight: 500;
     color: var(--white);
     text-shadow: var(--dark) 1px 1px;
 }
+
 .banner__subtext {
     font-size: 2rem;
     color: var(--white);
     text-shadow: var(--dark) 1px 1px;
 }
 
+.news {
+    width: 70%;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.news-title {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2.6rem;
+}
+
+.border-radius {
+    border-radius: 1rem;
+}
+
+/* Carrusel */
+.carousel .carousel-h {
+    font-size: 3.4rem;
+}
+
+.carousel .carousel-p {
+    font-size: 2rem;
+}
+
 /* Section */
-.section {
-    width: 80%;
-    max-width: 1200rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+.cursos {
     align-items: center;
-    margin: 0 auto;
-    margin-bottom: 2.5rem;
-    padding: 2rem;
-    box-shadow: 3px 6px 9px 0px rgba(61,61,61,0.75);
-    -webkit-box-shadow: 3px 6px 9px 0px rgba(61,61,61,0.75);
-    -moz-box-shadow: 3px 6px 9px 0px rgba(61,61,61,0.75);
+    gap: 2rem;
 }
 
-.card {
-    display: flex;
-    position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 75%;
-    height: 30rem;
-    margin: 2rem 0;
-    z-index: -2;
-}
-
-.card:nth-child(odd) {
-    justify-content: flex-end;
-}
-
-.cursoInterior {
-    background-image: url(../img/cursoInterior.webp);
-}
-
-.cursoExterior {
-    background-image: url(../img/cursoExterior.webp);
-}
-
-.cursoTrabajo {
-    background-image: url(../img/cursoOficinas.webp);
-}
-
-.card__shadow {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(1,1,1,0.9);
-    background: linear-gradient(0deg,rgba(1,1,1,0.9) 35%, rgba(255,255,255,0) 90%);
-    background: -webkit-linear-gradient(0deg,rgba(1,1,1,0.9) 35%, rgba(255,255,255,0) 90%);
-    background: -moz-linear-gradient(0deg,rgba(1,1,1,0.9) 35%, rgba(255,255,255,0) 90%);
-    z-index: -1;
-}
-
-.card:nth-child(odd) .card__shadow {
-    background: rgba(1,1,1,0.9);
-    background: linear-gradient(180deg,rgba(1,1,1,0.9) 35%, rgba(255,255,255,0) 90%);
-    background: -webkit-linear-gradient(180deg,rgba(1,1,1,0.9) 35%, rgba(255,255,255,0) 90%);
-    background: -moz-linear-gradient(180deg,rgba(1,1,1,0.9) 35%, rgba(255,255,255,0) 90%);
-}
-
-.card__contenido {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    text-align: center;
-    align-items: center;
-    color: var(--white);
-    padding: 3rem;
-    width: 35%;
+.card-body {
     height: 100%;
 }
 
-.card__contenido h3 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-}
-
-/* Section Redes */
-.sectionRedes {
-    align-items: center;
-    text-align: center;
-}
-
-.sectionRedes__icons {
-    display: flex;
-    justify-content: space-around;
-    width: 65%;
-    margin: 0 auto;
-    padding-top: 2rem;
-    border-top: solid .1rem #555555;
-}
-.sectionRedes__icons .redesIcon {
-    height: 8rem;
+.card-title {
+    font-size: 2rem;
 }
 
 /* footer */
+.logo-footer {
+    font-size: 3rem;
+}
 
-.footer {
-    background-color: var(--dark);
-    text-align: center;
+.container {
     padding: 2rem;
-    margin-top: 2rem;
-    box-shadow: 0px 8px 9px 0px rgba(0,0,0,0.77) inset;
-    -webkit-box-shadow: 0px 8px 9px 0px rgba(0,0,0,0.77) inset;
-    -moz-box-shadow: 0px 8px 9px 0px rgba(0,0,0,0.77) inset;
-}
-
-.footer__contenido {
-    display: flex;
-    justify-content: center;
-}
-
-.footer__contenido-div {
-    width: 50rem;
-    color: var(--white);
-    text-align: start;
-    padding: 0 5rem;
-    border-right: solid var(--white) 1px;
-}
-
-.footer__contenido-div:last-child {
-    border-right: none;
-}
-
-.footer__contenido-div ul {
-    padding: 0;
-}
-
-.footer__contenido-div ul li {
-    line-height: 2rem;
-}
-
-.footer h4 {
-    color: var(--white);
-}
-
-.footer__contenido-div .logo {
-    font-size: 5rem;
-    margin: 0 auto;
 }
 
 /* Nosotros */
@@ -317,14 +244,14 @@ h1,h2,h3,h4,h5,h6 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(1,1,1,0.9);
-    background: linear-gradient(0deg,rgba(1,1,1,0.9) 35%, rgba(0,255,0,0.05) 90%);
-    background: -webkit-linear-gradient(0deg,rgba(1,1,1,0.9) 35%, rgba(0,255,0,0.05) 90%);
-    background: -moz-linear-gradient(0deg,rgba(1,1,1,0.9) 35%, rgba(0,255,0,0.05) 90%);
+    background: rgba(1, 1, 1, 0.9);
+    background: linear-gradient(0deg, rgba(1, 1, 1, 0.9) 35%, rgba(0, 255, 0, 0.05) 90%);
+    background: -webkit-linear-gradient(0deg, rgba(1, 1, 1, 0.9) 35%, rgba(0, 255, 0, 0.05) 90%);
+    background: -moz-linear-gradient(0deg, rgba(1, 1, 1, 0.9) 35%, rgba(0, 255, 0, 0.05) 90%);
     z-index: -10;
 }
 
-.bannerNosotros__container {
+.bannerNosotros__content {
     padding: 4rem;
     width: 35%;
     height: 100%;
@@ -332,14 +259,33 @@ h1,h2,h3,h4,h5,h6 {
     z-index: 10;
 }
 
-.bannerNosotros__container h2 {
+.bannerNosotros__content h2 {
     margin-bottom: 3.5rem;
     font-size: 4rem;
 }
 
-.bannerNosotros__container p {
+.bannerNosotros__content p {
     font-size: 2rem;
 }
+
+@media (max-width: 960px) {
+    .bannerNosotros__content {
+        width: 100%;
+        color: var(--white);
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+    }
+
+    .bannerNosotros__shadow {
+        background: rgba(1, 1, 1, 0.9);
+        background: linear-gradient(90deg, rgba(1, 1, 1, 0.9) 35%, rgba(0, 255, 0, 0.05) 90%);
+        background: -webkit-linear-gradient(90deg, rgba(1, 1, 1, 0.9) 35%, rgba(0, 255, 0, 0.05) 90%);
+        background: -moz-linear-gradient(90deg, rgba(1, 1, 1, 0.9) 35%, rgba(0, 255, 0, 0.05) 90%);
+    }
+}
+
+/* staff */
 
 .staff {
     width: 70%;
@@ -350,32 +296,6 @@ h1,h2,h3,h4,h5,h6 {
 .staff__title {
     text-align: center;
     margin: 2rem 0;
-}
-
-.staff__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 3rem;
-}
-
-.staff__container-card {
-    background-color: var(--lightgreen);
-    padding: 2rem;
-    align-items: center;
-    border-radius: 0.5rem;
-    box-shadow: 8px 9px 5px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 8px 9px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 8px 9px 5px 0px rgba(0,0,0,0.75);
-}
-
-.staff__container-card h3 {
-    margin-bottom: 1rem;
-}
-
-.staff__container-card img {
-    width: 100%;
-    margin-bottom: 1.5rem;
-    border-radius: 0.5rem;
 }
 
 /* Cursos */
@@ -392,33 +312,6 @@ h1,h2,h3,h4,h5,h6 {
     margin-top: 2rem;
 }
 
-.curso {
-    background-color: var(--lightgreen);
-    display: flex;
-    height: 40rem;
-    padding: 3rem;
-    gap: 2rem;
-    margin: 3rem auto;
-    border-radius: 0.8rem;
-    box-shadow: 8px 9px 5px 0px rgba(0,0,0,0.62);
-    -webkit-box-shadow: 8px 9px 5px 0px rgba(0,0,0,0.62);
-    -moz-box-shadow: 8px 9px 5px 0px rgba(0,0,0,0.62);
-}
-
-.curso img {
-    height: 100%;
-    width: 55%;
-    border-radius: .8rem;
-}
-
-.curso h3 {
-    font-size: 4rem;
-    margin-bottom: 2rem;
-}
-
-.curso p {
-    font-size: 1.8rem;
-}
 /* Inspirate */
 .catalogue img {
     height: 15rem;
