--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,106 @@ h6 {
     margin-top: 2rem;
 }
 
+.center {
+    object-fit: cover;
+    object-position: center;
+}
 /* Inspirate */
-.catalogue img {
-    height: 15rem;
+.gallery-title {
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 3rem;
+}
+
+.gallery {
+    width: 90%;
+    margin: 2rem auto;
+    max-width: 120rem;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: 20rem 30rem;
+    gap: 1rem;
+    grid-auto-flow: dense;
+}
+
+.gallery-item {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.gallery-item .image {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.gallery-item .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    cursor: pointer;
+    transition: .5s ease-in-out;
+}
+
+.gallery-item:hover .image img {
+    transform: scale(1.5);
+}
+
+.w-1 {
+    grid-column: span 1;
+}
+
+.w-2 {
+    grid-column: span 2;
+}
+
+.w-3 {
+    grid-column: span 3;
+}
+
+
+.h-1 {
+    grid-row: span 1;
+}
+
+.h-2 {
+    grid-row: span 2;
+}
+
+@media (max-width: 768px) {
+    .gallery {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .w-3 {
+        grid-column: span 2;
+    }
+}
+
+@media (max-width: 480px) {
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+/* Contacto */
+.map-container {
+    padding: 2rem;
+    align-items: center;
+    text-align: center;
+}
+
+.map-title {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+.map {
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
+}
+
+.btn-size {
+    font-size: 1.5rem;
 }
